vbnc/vbnc/vbnc/tests/Errors/32006-1.vb
Class T
    Const M_Byte_Char As SByte = "1"c
End Class